--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -97,7 +97,7 @@ a {
 }
 
 article {
-	padding: 50px 15px;
+	padding: 1rem;
 }
 article > *:first-child {
 	margin-top: 0;
@@ -113,8 +113,8 @@ header .right {
 
 /* Header */
 header {
-	padding: 20px 0;
-	height: 80px;
+	padding: 1rem;
+	height: auto;
 }
 header ul {
 	list-style: none;
@@ -129,7 +129,7 @@ header li:first-child {
 	margin: 0;
 }
 header li a {
-	margin: 0 10px;
+	margin: 0;
 }
 header li.logo {
 	font-size: 36px;
@@ -197,4 +197,7 @@ h6 {
   header .right {
   	float: none;
   }
+	.table{
+		width: auto;
+	}
 }
